--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body>
 <h1> Welcome to The RPS-Pentagame (v1)</h1>
+<button>Click Here To Begin!</button>
 
 <script src="main.js">
 </script>
