updated logic and added UI

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     </head>
     <body>
 <h1> Welcome to The RPS-Pentagame (v1)</h1>
-<button>Click Here To Begin!</button>
+<button id="gamePlayButton">Click Here To Begin!</button>
+
+<section id="game">
+<span> Player Score: </span> <span id="playerScore"></span> <br>
+<span> Computer Score: </span> <span id="computerScore"></span>
+<br>
+<button id="rockButton"> Rock </button>
+<button id="paperButton"> Paper </button>
+<button id="scissorButton"> Scissors </button>
+</section>
 
 <script src="main.js">
 </script>
