Added additional functionality
Logic added to announce winner, hide game board upon completion & reset scores and reveal new game button

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 <button id="gamePlayButton">Click Here To Begin!</button>
 
 <section id="game">
+
 <span> Player Score: </span> <span id="playerScore"></span> <br>
 <span> Computer Score: </span> <span id="computerScore"></span>
 <br>
+<section id="gameButtons">
 <button id="rockButton"> Rock </button>
 <button id="paperButton"> Paper </button>
 <button id="scissorButton"> Scissors </button>
 </section>
+</section>
+
+<button id="newGameButton"> New Game </button>
 
 <script src="main.js">
 </script>
